--- a/week-2/berkshire/my-berkshire-site.html
+++ b/week-2/berkshire/my-berkshire-site.html
@@ -1,3 +1,15 @@
+<!-- 
+- What was it like to translate your previous learning with HTML into an actual site?
+It was fun and exciting working with marshall we had a great time. We learned a lot about html and how to translate our learning into a concrete website. It was very enlightening.
+- How was it researching and using semantic HTML5 elements?
+It was a bit of a challenge but we got the hang of it after doing some research on HTML5 tags and practicing them.
+- How did you do at keeping to best practices (i.e. no formatting in the HTML)
+We didn't format anything and we used HTML5 Elements. We madde short and sweet commit messages.
+- What seems good and bad about HTML?
+It is a great way to oragnize a webpage but to someone who is not familliar with it it can be a pain. HTML5 is great for screen readers and formating, but there is more to memorize.
+- What tricks do you have for remembering how to write HTML?
+I try to think about structure more than format. I also use the acronym HTML as Head Title Main Last to help me remember the format.
+-->
 <!DOCTYPE html>
 <html>
 <head>
