Added Bonus challenge

--- a/week-2/my-berkshire-site.html
+++ b/week-2/my-berkshire-site.html
@@ -1,3 +1,15 @@
+<!-- 
+- What was it like to translate your previous learning with HTML into an actual site?
+It was fun and exciting working with marshall we had a great time. We learned a lot about html and how to translate our learning into a concrete website. It was very enlightening.
+- How was it researching and using semantic HTML5 elements?
+It was a bit of a challenge but we got the hang of it after doing some research on HTML5 tags and practicing them.
+- How did you do at keeping to best practices (i.e. no formatting in the HTML)
+We didn't format anything and we used HTML5 Elements. We madde short and sweet commit messages.
+- What seems good and bad about HTML?
+It is a great way to oragnize a webpage but to someone who is not familliar with it it can be a pain. HTML5 is great for screen readers and formating, but there is more to memorize.
+- What tricks do you have for remembering how to write HTML?
+I try to think about structure more than format. I also use the acronym HTML as Head Title Main Last to help me remember the format.
+-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,14 +26,14 @@
     <ul>
         <li><a href="#">A Message From Warren E. Buffett</a></li>
         <li><a href="#">News Releases</a> Updated November 6th 2015</li>
-        <li><a href="#">Annual &amp; Interim Reports</a> Updated November 6, 2015</li>
-        <li><a href="#">Warren Buffets Letters to Berkshire Shareholders</a> Updated Febuary 28th 2015</li>
+        <li><a href="#">Annual &amp; Interim Reports</a><span>Updated November 6, 2015</span></li>
+        <li><a href="#">Warren Buffets Letters to Berkshire Shareholders</a> <span>Updated Febuary 28th 2015</span></li>
         <li><a href="#">Special Letters from Warren &amp; Charlie re: Past, Present, &amp; Future </a></li>
         <li><a href="#">Charlie Mungers Letters to WESCO Shareholders</a></li>
         <li><a href="#">Link to SEC Filings</a></li>
         <li><a href="#">Annual Meeting Information</a></li>
         <li><a href="#">Links to Berkshire Subsidiary Companies</a></li>
-        <li><a href="#">Celebrating 50 Years of a Profitable Partnership</a>(A Commerative Book First Sold at the 2015 Annual Meeting and nOw for Sale on eBay</li>
+        <li><a href="#">Celebrating 50 Years of a Profitable Partnership</a><span>(A Commerative Book First Sold at the 2015 Annual Meeting and nOw for Sale on eBay</span></li>
         <li><a href="#">Corporate Governenance</a></li>
         <li><a href="#">Comparitive Rights and Relative Prices of Class A and B Stock</a></li>
         <li><a href="#">Owners Manual</a></li>
@@ -31,7 +43,7 @@
             </div>
     <hr/>
     <aside>
-        <img src="imgs/geicoimg.gif">
+        <img src="http://www.berkshirehathaway.com/geicoimg.gif">
         <p>FOR A FREE CAR INSURANCE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY <br/> 
             <a href="www.geico.com">www.geico.com</a> OR CALL 18003956349 24 HOURS A DAY </p>
             </aside>
