--- a/week-2/my-berkshire-site.html
+++ b/week-2/my-berkshire-site.html
@@ -14,14 +14,15 @@ I try to think about structure more than format. I also use the acronym HTML as 
 <html>
 <head>
 	<title>Berkshire Site</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../week-3/stylesheets/my-berkshire-stylesheet.css">
 </head>
 <body>
     <header>
-        <h1>Berkshire Hathaway Inc.</h1>
+        <h1><span>B</span>erkshire <span>H</span>athaway Inc.</h1>
         <h3>3555 Farnam Street <br/> Omaha, NE, 68131 </h3>
         <h2>Official Home Page <h2>
     </header>
-    <hr/>
     <div>
     <ul>
         <li><a href="#">A Message From Warren E. Buffett</a></li>
@@ -33,7 +34,7 @@ I try to think about structure more than format. I also use the acronym HTML as 
         <li><a href="#">Link to SEC Filings</a></li>
         <li><a href="#">Annual Meeting Information</a></li>
         <li><a href="#">Links to Berkshire Subsidiary Companies</a></li>
-        <li><a href="#">Celebrating 50 Years of a Profitable Partnership</a><span>(A Commerative Book First Sold at the 2015 Annual Meeting and nOw for Sale on eBay</span></li>
+        <li><a href="#">Celebrating 50 Years of a Profitable Partnership</a><span>(A Commerative Book First Sold at the 2015 Annual Meeting and now for Sale on eBay</span></li>
         <li><a href="#">Corporate Governenance</a></li>
         <li><a href="#">Comparitive Rights and Relative Prices of Class A and B Stock</a></li>
         <li><a href="#">Owners Manual</a></li>
@@ -41,18 +42,16 @@ I try to think about structure more than format. I also use the acronym HTML as 
         <li><a href="#">Letters From Warren E. Buffet Regarding Pledges to make Gifts of Berkshire Stock</a></li>
    </ul>
             </div>
-    <hr/>
-    <aside>
+    <aside class="clear">
         <img src="http://www.berkshirehathaway.com/geicoimg.gif">
         <p>FOR A FREE CAR INSURANCE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY <br/> 
             <a href="www.geico.com">www.geico.com</a> OR CALL 18003956349 24 HOURS A DAY </p>
             </aside>
-        <hr/>
-            <p>If you have any comments about our WEB page, you can either write us at the address shown above or e-mail us at <a href="mailto: berkshire@berkshirehathaway.com">berkshire@berkshirehathaway.com</a> However, due to the limited number of personnel in our corporate office, we are unable to provide a direct response.</p>
+            <p class="cs">If you have any comments about our WEB page, you can either write us at the address shown above or e-mail us at <a href="mailto: berkshire@berkshirehathaway.com">berkshire@berkshirehathaway.com</a> However, due to the limited number of personnel in our corporate office, we are unable to provide a direct response.</p>
             <hr/>
             <footer>
                 <a href="#">Legal Disclaimer</a>
-                <p> Copyright &copy; 1978 to 2015 Berkshire Hathaway Inc.</p>
+                <p> Copyright &copy; 1978 to 2015 <b>Berkshire Hathaway Inc.</b></p>
             </footer>
 </body>
 </html>
