--- a/week-4/gps/gps2-1.html
+++ b/week-4/gps/gps2-1.html
@@ -276,6 +276,8 @@ We spent [#] hours on this challenge.
     <footer>
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
-  <!-- Add your reflection here as a comment. -->
+  <!-- Add your reflection here as a comment.
+    I feel a lot more confident with CSS positioning than I did before I feel like I was able to help my pair figure out how t use CSS Positioning a litlle bit better at the end. We finished the challenge very fast so I feel that we were both very skilled in CSS for our level I feel like I am begining to get the hang of this css thing. Once I saw the challenge I had a vague Idea in my head of how I should solve the challnege and I was able to successfully implement that onto CSS. I feel like I am excelling or at least keeping up to pace with the learning competencies for these GPS's this one in praticular.
+   -->
   </body>
 </html>
